# criterion-charts-tsx

./: Cargo.toml  README.md  cchart.tsx  ccharts-fll.tsx  ccharts.tsx  index.tsx  justfile  linreg.tsx  mtpi.tsx  template.tsx.tpl
bak/: avg_times_crit.txt  foofile.tsx  kde_crit.tsx_orig  kdefile.tsx  meantime.tsx  raw-1.csv  raw-2.csv  raw_data_master.tsx_orig  raw_data_yardstick.csv  raw_master.csv  totaltime.tsx
src/: ccharts.rs  cplot.rs  infomap.rs  lib.rs  linreg.rs  lrdata.rs  mtpi.rs  rawdata.rs  stats.rs  timeunit.rs  tsxcode.rs  tsxdata.rs  tsxgen.rs
